[gd_scene load_steps=10 format=3 uid="uid://cpowcuv1nhf3v"]

[ext_resource type="Script" uid="uid://bmtb7b81gighf" path="res://game_screen.gd" id="1_t5odh"]
[ext_resource type="Texture2D" uid="uid://cwiteg0x7a63n" path="res://double.png" id="2_double_png"]
[ext_resource type="Texture2D" uid="uid://bpsfyl7ejsx3v" path="res://swap.png" id="3_swap_png"]
[ext_resource type="Texture2D" uid="uid://d0oinwxij2cc8" path="res://golden.png" id="4_golden_png"]
[ext_resource type="Texture2D" uid="uid://cgmc6uwykokim" path="res://erase.png" id="5_erase_png"]
[ext_resource type="Texture2D" uid="uid://teskhakfelk0" path="res://shield.png" id="6_shield_png"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xwjjp"]
bg_color = Color(0.09411765, 0.09411765, 0.09411765, 0.9882353)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_norob"]
bg_color = Color(0.09411765, 0.09411765, 0.09411765, 0.9882353)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yla3h"]
bg_color = Color(0.09411765, 0.09411765, 0.09411765, 0.9882353)

[node name="GameScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t5odh")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.11372549, 0.11372549, 0.11372549, 1)

[node name="MainVBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 15.0
offset_right = -10.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Header" type="HBoxContainer" parent="MainVBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="PlayerX_Info" type="PanelContainer" parent="MainVBox/Header"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ColorRect" type="ColorRect" parent="MainVBox/Header/PlayerX_Info"]
layout_mode = 2
color = Color(0.17254902, 0.17254902, 0.17254902, 1)

[node name="VBox" type="VBoxContainer" parent="MainVBox/Header/PlayerX_Info"]
layout_mode = 2

[node name="PlayerX_Label" type="Label" parent="MainVBox/Header/PlayerX_Info/VBox"]
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_color = Color(0.9098039, 0.6862745, 0.27058825, 1)
text = "PLAYER X"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerX_RP_Label" type="Label" parent="MainVBox/Header/PlayerX_Info/VBox"]
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_color = Color(0.9098039, 0.6862745, 0.27058825, 1)
text = "RP: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MainVBox/Header"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="TurnIndicator" type="Label" parent="MainVBox/Header/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Giliran: X"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InfoButton" type="Button" parent="MainVBox/Header/VBoxContainer"]
layout_mode = 2
text = "Info"

[node name="PlayerO_Info" type="PanelContainer" parent="MainVBox/Header"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ColorRect" type="ColorRect" parent="MainVBox/Header/PlayerO_Info"]
layout_mode = 2
color = Color(0.17254902, 0.17254902, 0.17254902, 1)

[node name="VBox" type="VBoxContainer" parent="MainVBox/Header/PlayerO_Info"]
layout_mode = 2

[node name="PlayerO_Label" type="Label" parent="MainVBox/Header/PlayerO_Info/VBox"]
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_color = Color(0.9098039, 0.6862745, 0.27058825, 1)
text = "PLAYER O"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerO_RP_Label" type="Label" parent="MainVBox/Header/PlayerO_Info/VBox"]
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_color = Color(0.9098039, 0.6862745, 0.27058825, 1)
text = "RP: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatusLabel" type="Label" parent="MainVBox"]
layout_mode = 2
size_flags_vertical = 6
text = "Mulai!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="BoardArea" type="CenterContainer" parent="MainVBox"]
custom_minimum_size = Vector2(0, 360)
layout_mode = 2
size_flags_vertical = 3

[node name="GameBoard" type="GridContainer" parent="MainVBox/BoardArea"]
layout_mode = 2
theme_override_constants/h_separation = 5
theme_override_constants/v_separation = 5
columns = 5

[node name="Cell_0_0" type="Button" parent="MainVBox/BoardArea/GameBoard"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_xwjjp")
theme_override_styles/disabled = SubResource("StyleBoxFlat_xwjjp")

[node name="Cell_0_1" type="Button" parent="MainVBox/BoardArea/GameBoard"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_xwjjp")
theme_override_styles/disabled = SubResource("StyleBoxFlat_xwjjp")

[node name="Cell_0_2" type="Button" parent="MainVBox/BoardArea/GameBoard"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_xwjjp")
theme_override_styles/disabled = SubResource("StyleBoxFlat_xwjjp")

[node name="Cell_0_3" type="Button" parent="MainVBox/BoardArea/GameBoard"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_xwjjp")
theme_override_styles/disabled = SubResource("StyleBoxFlat_xwjjp")

[node name="Cell_0_4" type="Button" parent="MainVBox/BoardArea/GameBoard"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_xwjjp")
theme_override_styles/disabled = SubResource("StyleBoxFlat_xwjjp")

[node name="Cell_0_5" type="Button" parent="MainVBox/BoardArea/GameBoard"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_xwjjp")
theme_override_styles/disabled = SubResource("StyleBoxFlat_xwjjp")

[node name="Cell_0_6" type="Button" parent="MainVBox/BoardArea/GameBoard"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_xwjjp")
theme_override_styles/disabled = SubResource("StyleBoxFlat_xwjjp")

[node name="Cell_0_7" type="Button" parent="MainVBox/BoardArea/GameBoard"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_xwjjp")
theme_override_styles/disabled = SubResource("StyleBoxFlat_xwjjp")

[node name="Cell_0_8" type="Button" parent="MainVBox/BoardArea/GameBoard"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_xwjjp")
theme_override_styles/disabled = SubResource("StyleBoxFlat_xwjjp")

[node name="Cell_0_9" type="Button" parent="MainVBox/BoardArea/GameBoard"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_xwjjp")
theme_override_styles/disabled = SubResource("StyleBoxFlat_xwjjp")

[node name="Cell_0_10" type="Button" parent="MainVBox/BoardArea/GameBoard"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_xwjjp")
theme_override_styles/disabled = SubResource("StyleBoxFlat_xwjjp")

[node name="Cell_0_11" type="Button" parent="MainVBox/BoardArea/GameBoard"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_xwjjp")
theme_override_styles/disabled = SubResource("StyleBoxFlat_xwjjp")

[node name="Cell_0_12" type="Button" parent="MainVBox/BoardArea/GameBoard"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_xwjjp")
theme_override_styles/disabled = SubResource("StyleBoxFlat_xwjjp")

[node name="Cell_0_13" type="Button" parent="MainVBox/BoardArea/GameBoard"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_xwjjp")
theme_override_styles/disabled = SubResource("StyleBoxFlat_xwjjp")

[node name="Cell_0_14" type="Button" parent="MainVBox/BoardArea/GameBoard"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_xwjjp")
theme_override_styles/disabled = SubResource("StyleBoxFlat_xwjjp")

[node name="Cell_0_15" type="Button" parent="MainVBox/BoardArea/GameBoard"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_xwjjp")
theme_override_styles/disabled = SubResource("StyleBoxFlat_xwjjp")

[node name="Cell_0_16" type="Button" parent="MainVBox/BoardArea/GameBoard"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_xwjjp")
theme_override_styles/disabled = SubResource("StyleBoxFlat_xwjjp")

[node name="Cell_0_17" type="Button" parent="MainVBox/BoardArea/GameBoard"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_xwjjp")
theme_override_styles/disabled = SubResource("StyleBoxFlat_xwjjp")

[node name="Cell_0_18" type="Button" parent="MainVBox/BoardArea/GameBoard"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_xwjjp")
theme_override_styles/disabled = SubResource("StyleBoxFlat_xwjjp")

[node name="Cell_0_19" type="Button" parent="MainVBox/BoardArea/GameBoard"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_xwjjp")
theme_override_styles/disabled = SubResource("StyleBoxFlat_xwjjp")

[node name="Cell_0_20" type="Button" parent="MainVBox/BoardArea/GameBoard"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_xwjjp")
theme_override_styles/disabled = SubResource("StyleBoxFlat_xwjjp")

[node name="Cell_0_21" type="Button" parent="MainVBox/BoardArea/GameBoard"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_xwjjp")
theme_override_styles/disabled = SubResource("StyleBoxFlat_xwjjp")

[node name="Cell_0_22" type="Button" parent="MainVBox/BoardArea/GameBoard"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_xwjjp")
theme_override_styles/disabled = SubResource("StyleBoxFlat_xwjjp")

[node name="Cell_0_23" type="Button" parent="MainVBox/BoardArea/GameBoard"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_xwjjp")
theme_override_styles/disabled = SubResource("StyleBoxFlat_xwjjp")

[node name="Cell_0_24" type="Button" parent="MainVBox/BoardArea/GameBoard"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_xwjjp")
theme_override_styles/disabled = SubResource("StyleBoxFlat_xwjjp")

[node name="PowerUpBar" type="PanelContainer" parent="MainVBox"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 3

[node name="PowerUpGrid" type="GridContainer" parent="MainVBox/PowerUpBar"]
layout_mode = 2
theme_override_constants/h_separation = 5
theme_override_constants/v_separation = 5
columns = 5

[node name="PowerUp_Shield" type="Button" parent="MainVBox/PowerUpBar/PowerUpGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.9098039, 0.6862745, 0.27058825, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_norob")

[node name="VBoxContainer" type="VBoxContainer" parent="MainVBox/PowerUpBar/PowerUpGrid/PowerUp_Shield"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="MainVBox/PowerUpBar/PowerUpGrid/PowerUp_Shield/VBoxContainer"]
layout_mode = 2
texture = ExtResource("6_shield_png")
stretch_mode = 5

[node name="Label" type="Label" parent="MainVBox/PowerUpBar/PowerUpGrid/PowerUp_Shield/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9098039, 0.6862745, 0.27058825, 1)
text = "Shield
2RP"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PowerUp_Erase" type="Button" parent="MainVBox/PowerUpBar/PowerUpGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.9098039, 0.6862745, 0.27058825, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_yla3h")

[node name="VBoxContainer" type="VBoxContainer" parent="MainVBox/PowerUpBar/PowerUpGrid/PowerUp_Erase"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="MainVBox/PowerUpBar/PowerUpGrid/PowerUp_Erase/VBoxContainer"]
layout_mode = 2
texture = ExtResource("5_erase_png")
stretch_mode = 5

[node name="Label" type="Label" parent="MainVBox/PowerUpBar/PowerUpGrid/PowerUp_Erase/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9098039, 0.6862745, 0.27058825, 1)
text = "Erase
2RP"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PowerUp_Golden" type="Button" parent="MainVBox/PowerUpBar/PowerUpGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.9098039, 0.6862745, 0.27058825, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_yla3h")

[node name="VBoxContainer" type="VBoxContainer" parent="MainVBox/PowerUpBar/PowerUpGrid/PowerUp_Golden"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="MainVBox/PowerUpBar/PowerUpGrid/PowerUp_Golden/VBoxContainer"]
layout_mode = 2
texture = ExtResource("4_golden_png")
stretch_mode = 5

[node name="Label" type="Label" parent="MainVBox/PowerUpBar/PowerUpGrid/PowerUp_Golden/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9098039, 0.6862745, 0.27058825, 1)
text = "Goldern
4RP"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PowerUp_Double" type="Button" parent="MainVBox/PowerUpBar/PowerUpGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.9098039, 0.6862745, 0.27058825, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_yla3h")

[node name="VBoxContainer" type="VBoxContainer" parent="MainVBox/PowerUpBar/PowerUpGrid/PowerUp_Double"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="MainVBox/PowerUpBar/PowerUpGrid/PowerUp_Double/VBoxContainer"]
layout_mode = 2
texture = ExtResource("2_double_png")
stretch_mode = 5

[node name="Label" type="Label" parent="MainVBox/PowerUpBar/PowerUpGrid/PowerUp_Double/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9098039, 0.6862745, 0.27058825, 1)
text = "Double
4RP"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PowerUp_Swap" type="Button" parent="MainVBox/PowerUpBar/PowerUpGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.9098039, 0.6862745, 0.27058825, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_yla3h")

[node name="VBoxContainer" type="VBoxContainer" parent="MainVBox/PowerUpBar/PowerUpGrid/PowerUp_Swap"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="MainVBox/PowerUpBar/PowerUpGrid/PowerUp_Swap/VBoxContainer"]
layout_mode = 2
texture = ExtResource("3_swap_png")
stretch_mode = 5

[node name="Label" type="Label" parent="MainVBox/PowerUpBar/PowerUpGrid/PowerUp_Swap/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9098039, 0.6862745, 0.27058825, 1)
text = "Swap
6RP"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WinScreen" type="PanelContainer" parent="."]
visible = false
custom_minimum_size = Vector2(300, 200)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="WinScreen"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="WinLabel" type="Label" parent="WinScreen/VBox"]
layout_mode = 2
text = "PLAYER X MENANG!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="RestartButton" type="Button" parent="WinScreen/VBox"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/normal = SubResource("StyleBoxFlat_xwjjp")
theme_override_styles/disabled = SubResource("StyleBoxFlat_xwjjp")
text = "Main Lagi"

[node name="BotTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true
